# nanoGit

./: .gitignore  CMakeLists.txt  readme.md
src/: main.cpp  repository.cpp  repository.h
src/commands/: init.cpp  init.h
